# embedded_adas_ttc-cpp

./: CMakeLists.txt  README.md
examples/: pipeline_demo.cpp
include/adas/aeb/: aeb_controller.hpp  ttc_calculator.hpp
include/adas/core/: aeb_command.hpp  detection.hpp  track.hpp  ttc_result.hpp  types.hpp
include/adas/sensors/: camera_sensor.hpp  i_sensor.hpp  radar_sensor.hpp
include/adas/tracking/: i_kalman_filter.hpp  simple_kalman.hpp  track_manager.hpp
src/aeb/: aeb_controller.cpp  ttc_calculator.cpp
src/sensors/: camera_sensor.cpp  radar_sensor.cpp
src/tracking/: simple_kalman.cpp  track_manger.cpp
